--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,15 @@
 header {
   background-image: url("../img/umbrella.jpg");
   background-size: cover;
+  background-attachment: fixed;
   height: 100vh;
   display: flex;
+  .name {
+    padding: 30px 0 0 30px;
+    p {
+      border-bottom: 2px solid white;
+    }
+  }
   button {
     cursor: pointer;
     border: 0;
@@ -55,4 +62,5 @@ header {
       outline: none;
     }
   }
+
 }
