--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,3 +24,17 @@ header {
     font-size: 2.5em;
   }
 }
+
+nav {
+  a {
+    color: black;
+    font-family: 'futura-md';
+    font-size: 1.2em;
+  }
+  p {
+    text-transform: uppercase;
+    font-size: 2em;
+  }
+  ul {
+  }
+}
