--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,7 @@ header {
     color: white;
     font-family: 'futura-md';
     font-size: 1.2em;
+    letter-spacing: .2em;
   }
   button {
     color: white;
@@ -33,8 +34,6 @@ nav {
   }
   p {
     text-transform: uppercase;
-    font-size: 2em;
-  }
-  ul {
+    font-size: 1.3em;
   }
 }
