--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -2,7 +2,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 70px;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -11,6 +11,9 @@ nav {
   }
   p {
     margin-left: 60px;
+    border: solid 3px black;
+    border-radius: 100%;
+    padding: 10px;
     a {
       cursor: pointer;
       border: none;
