--- a/css/main.css
+++ b/css/main.css
@@ -421,12 +421,20 @@ template {
 * {
   font-family: "century";
 }
+* img {
+  width: 50px;
+}
 
 header p {
   color: white;
   font-family: 'futura-md';
-  font-size: 1.2em;
   letter-spacing: .2em;
+  font-size: .8em;
+}
+@media only screen and (min-width: 770px) {
+  header p {
+    font-size: 1.2em;
+  }
 }
 header button {
   color: white;
@@ -437,7 +445,11 @@ header button {
 nav a {
   color: black;
   font-family: 'futura-md';
-  font-size: 1.2em;
+}
+@media only screen and (min-width: 770px) {
+  nav a {
+    font-size: 1.2em;
+  }
 }
 nav p {
   text-transform: uppercase;
@@ -450,63 +462,81 @@ nav p {
   box-sizing: border-box;
 }
 
+header::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+header .header-container {
+  width: calc(100%);
+  float: left;
+  margin-left: 0;
+}
+
 header {
   background-image: url("../img/umbrella.jpg");
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
+  width: 100vw;
   height: 100vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-header .name {
-  padding: 30px 0 0 30px;
-}
-header .name p {
-  border-bottom: 2px solid white;
-}
-header button {
-  cursor: pointer;
-  border: 0;
-  background: none;
-  align-self: center;
-  position: relative;
-  margin: 0 auto;
-  padding: .5em 1em;
-  transition: color 0.15s;
-}
-header button::before, header button::after {
-  box-sizing: inherit;
-  content: '';
+header p {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  border: 3px solid transparent;
-  width: 0;
-  height: 0;
-}
-header button::before {
   top: 0;
   left: 0;
+  margin: 30px 0 0 30px;
 }
-header button::after {
-  bottom: 0;
-  right: 0;
+header .button-container button {
+  padding: .5em 1em;
+  border: solid 3px white;
+  background: none;
 }
-header button:hover::before, header button:hover::after {
-  width: 100%;
-  height: 100%;
-}
-header button:hover::before {
-  border-top-color: white;
-  border-right-color: white;
-  transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
-}
-header button:hover::after {
-  border-bottom-color: white;
-  border-left-color: white;
-  transition: border-color 0.15s ease-out 0.3s, width 0.15s ease-out 0.3s, height 0.15s ease-out 0.5s;
-}
-header button:focus {
-  outline: none;
+@media only screen and (min-width: 900px) {
+  header .button-container button {
+    cursor: pointer;
+    border: none;
+    position: relative;
+    transition: 0.15s;
+  }
+  header .button-container button::before, header .button-container button::after {
+    box-sizing: inherit;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 3px solid transparent;
+    width: 0;
+    height: 0;
+  }
+  header .button-container button::before {
+    top: 0;
+    left: 0;
+  }
+  header .button-container button::after {
+    bottom: 0;
+    right: 0;
+  }
+  header .button-container button:hover::before, header .button-container button:hover::after {
+    width: 100%;
+    height: 100%;
+  }
+  header .button-container button:hover::before {
+    border-top-color: white;
+    border-right-color: white;
+    transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
+  }
+  header .button-container button:hover::after {
+    border-bottom-color: white;
+    border-left-color: white;
+    transition: border-color 0.15s ease-out 0.3s, width 0.15s ease-out 0.3s, height 0.15s ease-out 0.5s;
+  }
+  header .button-container button:focus {
+    outline: none;
+  }
 }
 
 nav {
@@ -522,10 +552,15 @@ nav a {
   text-decoration: none;
 }
 nav p {
-  margin-left: 60px;
+  margin-left: 20px;
   border: solid 3px black;
   border-radius: 100%;
   padding: 10px;
+}
+@media only screen and (min-width: 770px) {
+  nav p {
+    margin-left: 60px;
+  }
 }
 nav p a {
   cursor: pointer;
@@ -564,36 +599,109 @@ nav p a:hover:after {
   left: 0;
 }
 nav ul {
-  display: flex;
-  list-style: none;
+  display: none;
 }
-nav ul li {
-  margin-left: 60px;
+@media only screen and (min-width: 900px) {
+  nav ul {
+    display: flex;
+    list-style: none;
+  }
+  nav ul li {
+    margin-left: 60px;
+  }
+  nav ul li:nth-child(3) {
+    margin-right: 60px;
+  }
+  nav ul li a {
+    border: none;
+    background: transparent;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+  }
+  nav ul li a::after {
+    position: absolute;
+    transition: .3s;
+    content: '';
+    width: 0;
+    bottom: 0;
+    height: 3px;
+    background: black;
+    right: 0;
+    left: auto;
+  }
+  nav ul li a:hover:after {
+    width: 100%;
+    left: 0;
+  }
 }
-nav ul li:nth-child(3) {
-  margin-right: 60px;
-}
-nav ul li a {
-  border: none;
-  background: transparent;
+nav #nav-icon {
+  width: 40px;
+  height: 45px;
   position: relative;
-  overflow: hidden;
-  transition: 0.3s;
+  margin-right: 20px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
-nav ul li a::after {
+@media only screen and (min-width: 900px) {
+  nav #nav-icon {
+    display: none;
+  }
+}
+nav #nav-icon span {
+  display: block;
   position: absolute;
-  transition: .3s;
-  content: '';
-  width: 0;
-  bottom: 0;
   height: 3px;
-  background: black;
-  right: 0;
-  left: auto;
-}
-nav ul li a:hover:after {
   width: 100%;
+  background: black;
+  opacity: 1;
   left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+nav #nav-icon span:nth-child(1) {
+  top: 0px;
+}
+nav #nav-icon span:nth-child(2), nav #nav-icon span:nth-child(3) {
+  top: 13px;
+}
+nav #nav-icon span:nth-child(4) {
+  top: 26px;
+}
+nav #nav-icon.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+nav #nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+nav #nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+nav #nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 
 /*# sourceMappingURL=main.css.map */
