--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,66 +1,72 @@
-header {
+header{
   background-image: url("../img/umbrella.jpg");
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
+  width: 100vw;
   height: 100vh;
   display: flex;
-  .name {
-    padding: 30px 0 0 30px;
-    p {
-      border-bottom: 2px solid white;
+  justify-content: center;
+  align-items: center;
+  p {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 30px 0 0 30px;
+  }
+  .button-container {
+    button {
+      padding: .5em 1em;
+      border: solid 3px white;
+      background: none;
+      @media #{$breakpoint-large} {
+        cursor: pointer;
+        border: none;
+        position: relative;
+        transition: 0.15s;
+        &::before,
+        &::after {
+          box-sizing: inherit;
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          border: 3px solid transparent;
+          width: 0;
+          height: 0;
+        }
+        &::before {
+          top: 0;
+          left: 0;
+        }
+        &::after {
+          bottom: 0;
+          right: 0;
+        }
+        &:hover::before,
+        &:hover::after {
+          width: 100%;
+          height: 100%;
+        }
+        &:hover::before {
+          border-top-color: white; // Make borders visible
+          border-right-color: white;
+          transition:
+          width 0.15s ease-out, // Width expands first
+          height 0.15s ease-out 0.15s; // And then height
+        }
+        &:hover::after {
+          border-bottom-color: white; // Make borders visible
+          border-left-color: white;
+          transition:
+          border-color 0.15s ease-out 0.3s, // Wait for ::before to finish before showing border
+          width 0.15s ease-out 0.3s, // And then exanding width
+          height 0.15s ease-out 0.5s; // And finally height
+        }
+        &:focus {
+          outline: none;
+        }
+      }
     }
   }
-  button {
-    cursor: pointer;
-    border: 0;
-    background: none;
-    align-self: center;
-    position: relative;
-    margin: 0 auto;
-    padding: .5em 1em;
-    transition: color 0.15s;
-    &::before,
-    &::after {
-      box-sizing: inherit;
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border: 3px solid transparent;
-      width: 0;
-      height: 0;
-    }
-    &::before {
-      top: 0;
-      left: 0;
-    }
-    &::after {
-      bottom: 0;
-      right: 0;
-    }
-    &:hover::before,
-    &:hover::after {
-      width: 100%;
-      height: 100%;
-    }
-    &:hover::before {
-      border-top-color: white; // Make borders visible
-      border-right-color: white;
-      transition:
-        width 0.15s ease-out, // Width expands first
-        height 0.15s ease-out 0.15s; // And then height
-    }
-    &:hover::after {
-      border-bottom-color: white; // Make borders visible
-      border-left-color: white;
-      transition:
-        border-color 0.15s ease-out 0.3s, // Wait for ::before to finish before showing border
-        width 0.15s ease-out 0.3s, // And then exanding width
-        height 0.15s ease-out 0.5s; // And finally height
-    }
-    &:focus {
-      outline: none;
-    }
-  }
-
 }
