--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -10,10 +10,13 @@ nav {
     text-decoration: none;
   }
   p {
-    margin-left: 60px;
+    margin-left: 20px;
     border: solid 3px black;
     border-radius: 100%;
     padding: 10px;
+    @media #{$breakpoint-medium} {
+      margin-left: 60px;
+    }
     a {
       cursor: pointer;
       border: none;
@@ -51,35 +54,110 @@ nav {
       }
     }
   }
+
   ul {
-    display: flex;
-    list-style: none;
-    li {
-      margin-left: 60px;
-      &:nth-child(3) {
-        margin-right: 60px;
+    display: none;
+    @media #{$breakpoint-large} {
+      display: flex;
+      list-style: none;
+      li {
+        margin-left: 60px;
+        &:nth-child(3) {
+          margin-right: 60px;
+        }
+        a {
+          border: none;
+          background: transparent;
+          position: relative;
+          overflow:hidden;
+          transition: 0.3s;
+          &::after {
+            position: absolute;
+            transition: .3s;
+            content: '';
+            width: 0;
+            bottom: 0;
+            height: 3px;
+            background: black;
+            right: 0;
+            left: auto;
+          }
+          &:hover:after {
+            width: 100%;
+            left: 0;
+          }
+        }
       }
-      a {
-        border: none;
-        background: transparent;
-        position: relative;
-        overflow:hidden;
-        transition: 0.3s;
-        &::after {
-          position: absolute;
-          transition: .3s;
-          content: '';
-          width: 0;
-          bottom: 0;
-          height: 3px;
-          background: black;
-          right: 0;
-          left: auto;
-        }
-        &:hover:after {
-          width: 100%;
-          left: 0;
-        }
+    }
+  }
+
+
+  #nav-icon {
+    width: 40px;
+    height: 45px;
+    position: relative;
+    margin-right: 20px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    @media #{$breakpoint-large} {
+      display: none;
+    }
+    span {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 100%;
+      background: black;
+      opacity: 1;
+      left: 0;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: .25s ease-in-out;
+      -moz-transition: .25s ease-in-out;
+      -o-transition: .25s ease-in-out;
+      transition: .25s ease-in-out;
+      &:nth-child(1) {
+        top: 0px;
+      }
+      &:nth-child(2),
+      &:nth-child(3) {
+        top: 13px;
+      }
+      &:nth-child(4) {
+        top: 26px;
+      }
+    }
+    &.open {
+      span:nth-child(1) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
+      }
+      span:nth-child(2) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+      span:nth-child(3) {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+      }
+      span:nth-child(4) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
       }
     }
   }
