--- a/css/main.css
+++ b/css/main.css
@@ -542,13 +542,15 @@ header .button-container button {
 nav {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
   height: 70px;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
 }
-nav a {
+nav marg
+a {
   text-decoration: none;
 }
 nav p {
@@ -602,6 +604,7 @@ nav ul {
   display: flex;
   list-style: none;
   justify-content: space-around;
+  width: 100%;
 }
 @media only screen and (min-width: 900px) {
   nav ul li {
