--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,11 +1,13 @@
 nav {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
   height: 70px;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  marg
   a {
     text-decoration: none;
   }
@@ -60,6 +62,7 @@ nav {
     display: flex;
     list-style: none;
     justify-content: space-around;
+    width: 100%;
 
     @media #{$breakpoint-large} {
       li {
