--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -36,8 +36,9 @@ nav {
   a {
     color: black;
     font-family: 'futura-md';
-    @media #{$breakpoint-medium} {
-      font-size: 1.2em;      
+    font-size: 1.4em;
+    @media #{$breakpoint-large} {
+      font-size: 1.2em;
     }
   }
   p {
