--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -3,16 +3,11 @@ nav {
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 70px;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  marg
-  a {
-    text-decoration: none;
-  }
   p {
-    margin-left: 20px;
+    margin: 15px 0 15px 20px;
     border: solid 3px black;
     border-radius: 100%;
     padding: 10px;
@@ -20,6 +15,7 @@ nav {
       margin-left: 60px;
     }
     a {
+      text-decoration: none;
       cursor: pointer;
       border: none;
       background: transparent;
@@ -58,44 +54,70 @@ nav {
   }
 
   ul {
-    // display: none;
-    display: flex;
     list-style: none;
-    justify-content: space-around;
     width: 100%;
+    height: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    -webkit-transition:height, 0.3s linear;
+   -moz-transition: height, 0.3s linear;
+   -ms-transition: height, 0.3s linear;
+   -o-transition: height, 0.3s linear;
+   transition: height, 0.3s linear;
+    &.open {
+      border-top: solid grey 1px;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      height: 50px;
+      -webkit-transition:height, 0.3s linear;
+      -moz-transition: height, 0.3s linear;
+      -ms-transition: height, 0.3s linear;
+      -o-transition: height, 0.3s linear;
+      transition: height, 0.3s linear;
+    }
 
     @media #{$breakpoint-large} {
-      li {
+      display: flex;
+      justify-content: flex-end;
+      width: 80%;
+      border: none;
+      overflow: visible;
+    }
+    li {
+      a {
+        text-decoration: none;
+      }
         margin-left: 60px;
         &:nth-child(3) {
           margin-right: 60px;
         }
-        a {
-          border: none;
-          background: transparent;
-          position: relative;
-          overflow:hidden;
-          transition: 0.3s;
-          &::after {
-            position: absolute;
-            transition: .3s;
-            content: '';
-            width: 0;
-            bottom: 0;
-            height: 3px;
-            background: black;
-            right: 0;
-            left: auto;
-          }
-          &:hover:after {
-            width: 100%;
-            left: 0;
-          }
+      a {
+        border: none;
+        background: transparent;
+        position: relative;
+        overflow:hidden;
+        transition: 0.3s;
+        &::after {
+          position: absolute;
+          transition: .3s;
+          content: '';
+          width: 0;
+          bottom: 0;
+          height: 3px;
+          background: black;
+          right: 0;
+          left: auto;
+        }
+        &:hover:after {
+          width: 100%;
+          left: 0;
         }
       }
     }
   }
-
 
   #nav-icon {
     width: 40px;
@@ -131,19 +153,19 @@ nav {
       -o-transition: .25s ease-in-out;
       transition: .25s ease-in-out;
       &:nth-child(1) {
-        top: 0px;
+        top: 8px;
       }
       &:nth-child(2),
       &:nth-child(3) {
-        top: 13px;
+        top: 20px;
       }
       &:nth-child(4) {
-        top: 26px;
+        top: 32px;
       }
     }
     &.open {
       span:nth-child(1) {
-        top: 18px;
+        top: 26px;
         width: 0%;
         left: 50%;
       }
@@ -160,7 +182,7 @@ nav {
         transform: rotate(-45deg);
       }
       span:nth-child(4) {
-        top: 18px;
+        top: 26px;
         width: 0%;
         left: 50%;
       }
