--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,9 +10,6 @@
 
 * {
   font-family: "century";
-  img {
-    width: 50px;
-  }
 }
 
 header {
@@ -44,5 +41,16 @@ nav {
   p {
     text-transform: uppercase;
     font-size: 1.3em;
+  }
+}
+
+.bio {
+  .bio-text {
+    font-size: 1.4em;
+    text-align: center;
+  }
+  i {
+    text-align: center;
+    font-size: 1.7em;
   }
 }
