--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -13,23 +13,24 @@ header {
       @include grid-column(4, $no-gutter);
       @include grid-shift(1);
     }
+    @media #{$breakpoint-large} {
+      @include grid-column(3, $no-gutter);
+      @include grid-shift(2);
+    }
   }
   .bio-text {
     @include grid-column(10, $no-gutter);
     @include grid-shift(1);
     @media #{$breakpoint-medium} {
-      @include grid-column(7, $no-gutter);
-      @include grid-shift(1);
+      @include grid-column(5, $no-gutter);
+      @include grid-shift(2);
+    }
+    @media #{$breakpoint-large} {
+      @include grid-column(5, $no-gutter);
+      @include grid-shift(3);
     }
   }
-  .social {
-    @include grid-column(10, $no-gutter);
-    @include grid-shift(1);
-    // @media #{$breakpoint-medium} {
-    //   @include grid-column(7, $no-gutter);
-    //   @include grid-shift(1);
-    // }
-  }
+
   .chevron {
     @include grid-column(12, $no-gutter);
   }
