--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -6,6 +6,7 @@ nav {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  z-index: 100;
   p {
     margin: 15px 0 15px 20px;
     border: solid 3px black;
