--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,5 +2,7 @@ $no-gutter: (
   gutter: 0
 );
 
+$grey: #D8D8D8;
+
 $breakpoint-medium: "only screen and (min-width: 760px)";
 $breakpoint-large: "only screen and (min-width: 1000px)";
