--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -55,8 +55,14 @@ nav {
   i {
     text-align: center;
     font-size: 1.7em;
-    @media #{$breakpoint-medium} {
-      text-align: left;
+    color: black;
+    @media #{$breakpoint-large} {
+      color: $grey;
+      transition: 0.3s;
+      &:hover {
+        color: black;
+        transition: 0.3s;
+      }
     }
   }
 }
@@ -82,13 +88,15 @@ nav {
       font-family: 'futura-md';
       font-size: .8em;
       letter-spacing: .1em;
+      @media #{$breakpoint-large} {
+        font-size: .9em;
+      }
     }
     p:nth-child(4) {
       color: black;
       font-size: 1.1em;
       text-decoration: none;
       text-align: left;
-      // letter-spacing: .1em;
     }
   }
 }
