--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,7 @@ nav p {
 }
 @media only screen and (min-width: 1000px) {
   .bio i {
+    cursor: pointer;
     color: #D8D8D8;
     transition: 0.3s;
   }
@@ -515,10 +516,35 @@ nav p {
   text-align: left;
 }
 
+footer button {
+  color: black;
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+footer .social i {
+  font-size: 2em;
+  color: black;
+}
+@media only screen and (min-width: 1000px) {
+  footer .social i {
+    cursor: pointer;
+    color: #D8D8D8;
+    transition: 0.3s;
+  }
+  footer .social i:hover {
+    color: black;
+    transition: 0.3s;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #F4F4F4;
 }
 
 header::after {
@@ -680,10 +706,10 @@ header .button-container button {
   padding: .5em 1em;
   border: solid 3px white;
   background: none;
+  cursor: pointer;
 }
 @media only screen and (min-width: 1000px) {
   header .button-container button {
-    cursor: pointer;
     border: none;
     position: relative;
     transition: 0.15s;
@@ -985,7 +1011,7 @@ nav #nav-icon.open span:nth-child(4) {
   content: '';
   width: 0;
   bottom: 0;
-  height: 3px;
+  height: 2px;
   background: black;
   right: 0;
   left: auto;
@@ -1017,6 +1043,70 @@ nav #nav-icon.open span:nth-child(4) {
 .projects .chevron {
   margin: 80px 0 150px 0;
   text-align: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  padding: 70px 0;
+  margin-top: 100px;
+}
+footer .button-container button {
+  cursor: pointer;
+  background: none;
+  padding: .5em 1em;
+  border: solid 3px black;
+}
+@media only screen and (min-width: 1000px) {
+  footer .button-container button {
+    border: none;
+    position: relative;
+    transition: 0.15s;
+  }
+  footer .button-container button::before, footer .button-container button::after {
+    box-sizing: inherit;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 3px solid transparent;
+    width: 0;
+    height: 0;
+  }
+  footer .button-container button::before {
+    top: 0;
+    left: 0;
+  }
+  footer .button-container button::after {
+    bottom: 0;
+    right: 0;
+  }
+  footer .button-container button:hover::before, footer .button-container button:hover::after {
+    width: 100%;
+    height: 100%;
+  }
+  footer .button-container button:hover::before {
+    border-top-color: black;
+    border-right-color: black;
+    transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
+  }
+  footer .button-container button:hover::after {
+    border-bottom-color: black;
+    border-left-color: black;
+    transition: border-color 0.15s ease-out 0.3s, width 0.15s ease-out 0.3s, height 0.15s ease-out 0.5s;
+  }
+  footer .button-container button:focus {
+    outline: none;
+  }
+}
+footer .social {
+  margin-top: 20px;
+}
+footer .social i {
+  margin: 0 15px;
 }
 
 /*# sourceMappingURL=main.css.map */
