--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,15 @@ $no-gutter: (
 );
 
 $grey: #D8D8D8;
+@mixin grey-hover {
+  cursor: pointer;
+  color: $grey;
+  transition: 0.3s;
+  &:hover {
+    color: black;
+    transition: 0.3s;
+  }
+}
 
 $breakpoint-medium: "only screen and (min-width: 760px)";
 $breakpoint-large: "only screen and (min-width: 1000px)";
