--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -91,9 +91,10 @@ nav {
     li {
       a {
         text-decoration: none;
+        cursor: pointer;
       }
         margin-left: 60px;
-        &:nth-child(3) {
+        &:nth-child(2) {
           margin-right: 60px;
         }
       a {
