change font name in directory

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "century";
-  src: url("../fonts/century.ttf");
+  src: url("../fonts/Century.ttf");
 }
 
 @font-face {
   font-family: "futura-md";
-  src: url("../fonts/futura-medium.ttf");
+  src: url("../fonts/Futura-Medium.ttf");
 }
 
 * {
