change filenames/calls in files

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 header{
-  background-image: url("../img/umbrella.jpg");
+  background-image: url("../img/umbrella.JPG");
   background-size: cover;
   background-attachment: fixed;
   position: relative;
