--- a/css/main.css
+++ b/css/main.css
@@ -412,11 +412,11 @@ template {
 
 @font-face {
   font-family: "century";
-  src: url("../fonts/century.ttf");
+  src: url("../fonts/Century.ttf");
 }
 @font-face {
   font-family: "futura-md";
-  src: url("../fonts/futura-medium.ttf");
+  src: url("../fonts/Futura-Medium.ttf");
 }
 * {
   font-family: "century";
@@ -686,7 +686,7 @@ header .header-container {
 }
 
 header {
-  background-image: url("../img/umbrella.jpg");
+  background-image: url("../img/umbrella.JPG");
   background-size: cover;
   background-attachment: fixed;
   position: relative;
