--- a/css/main.css
+++ b/css/main.css
@@ -690,7 +690,7 @@ header {
   background-size: cover;
   background-attachment: fixed;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
