--- a/css/main.css
+++ b/css/main.css
@@ -689,6 +689,7 @@ header {
   background-image: url("../img/umbrella.JPG");
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   position: relative;
   width: 100%;
   height: 100vh;
