--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,7 @@ header{
   background-image: url("../img/umbrella.JPG");
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   position: relative;
   width: 100%;
   height: 100vh;
