--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,10 @@
 header{
   background-image: url("../img/umbrella.JPG");
   background-size: cover;
+  background-position: center center;
   background-attachment: fixed;
-  background-position: center;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
