--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,10 @@
 header{
-  background-image: url("../img/umbrella.JPG");
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
   position: relative;
+  background-image: url("../img/umbrella.JPG");
+  background-attachment:scroll;
+  // background position: ;
+  background-size:cover;
+  // width:100%;
   width: 100vw;
   height: 100vh;
   display: flex;
