--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -141,7 +141,7 @@ nav {
     }
     span {
       display: block;
-      position: absolute;
+      position: relative;
       height: 3px;
       width: 100%;
       background: black;
@@ -160,10 +160,11 @@ nav {
       }
       &:nth-child(2),
       &:nth-child(3) {
+        position: absolute;
         top: 20px;
       }
       &:nth-child(4) {
-        top: 32px;
+        top: 28px;
       }
     }
     &.open {
