--- a/css/main.css
+++ b/css/main.css
@@ -687,34 +687,42 @@ header .header-container {
 
 header {
   position: relative;
-  background-image: url("../img/umbrella.JPG");
-  background-attachment: scroll;
-  background-size: cover;
-  width: 100vw;
+}
+header .parallax-window {
+  max-height: 100vh;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+header .parallax-static-content {
+  width: 100%;
   height: 100vh;
+  position: relative;
+  z-index: 9;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-header p {
+header .parallax-static-content p {
   position: absolute;
   top: 0;
   left: 0;
   margin: 30px 0 0 30px;
 }
-header .button-container button {
+header .parallax-static-content .button-container button {
   padding: .5em 1em;
   border: solid 3px white;
   background: none;
   cursor: pointer;
 }
 @media only screen and (min-width: 1000px) {
-  header .button-container button {
+  header .parallax-static-content .button-container button {
     border: none;
     position: relative;
     transition: 0.15s;
   }
-  header .button-container button::before, header .button-container button::after {
+  header .parallax-static-content .button-container button::before, header .parallax-static-content .button-container button::after {
     box-sizing: inherit;
     content: '';
     position: absolute;
@@ -724,31 +732,42 @@ header .button-container button {
     width: 0;
     height: 0;
   }
-  header .button-container button::before {
+  header .parallax-static-content .button-container button::before {
     top: 0;
     left: 0;
   }
-  header .button-container button::after {
+  header .parallax-static-content .button-container button::after {
     bottom: 0;
     right: 0;
   }
-  header .button-container button:hover::before, header .button-container button:hover::after {
+  header .parallax-static-content .button-container button:hover::before, header .parallax-static-content .button-container button:hover::after {
     width: 100%;
     height: 100%;
   }
-  header .button-container button:hover::before {
+  header .parallax-static-content .button-container button:hover::before {
     border-top-color: white;
     border-right-color: white;
     transition: width 0.15s ease-out, height 0.15s ease-out 0.15s;
   }
-  header .button-container button:hover::after {
+  header .parallax-static-content .button-container button:hover::after {
     border-bottom-color: white;
     border-left-color: white;
     transition: border-color 0.15s ease-out 0.3s, width 0.15s ease-out 0.3s, height 0.15s ease-out 0.5s;
   }
-  header .button-container button:focus {
+  header .parallax-static-content .button-container button:focus {
     outline: none;
   }
+}
+header .parallax-background {
+  background: url("../img/umbrella.JPG") repeat;
+  background-position: top;
+  background-size: cover;
+  height: 200vh;
+  left: 0;
+  position: absolute;
+  top: -33.33333vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 nav {
