--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,5 +13,8 @@ $grey: #D8D8D8;
   }
 }
 
+$parallax-window-height: 100vh;
+$parallax-background-height: $parallax-window-height * 2;
+
 $breakpoint-medium: "only screen and (min-width: 760px)";
 $breakpoint-large: "only screen and (min-width: 1000px)";
