--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,74 +1,91 @@
-header{
+header {
   position: relative;
-  background-image: url("../img/umbrella.JPG");
-  background-attachment:scroll;
-  // background position: ;
-  background-size:cover;
-  // width:100%;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  p {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 30px 0 0 30px;
+  .parallax-window {
+  max-height: $parallax-window-height;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width: 100%;
   }
-  .button-container {
-    button {
-      padding: .5em 1em;
-      border: solid 3px white;
-      background: none;
-      cursor: pointer;
-      @media #{$breakpoint-large} {
-        border: none;
-        position: relative;
-        transition: 0.15s;
-        &::before,
-        &::after {
-          box-sizing: inherit;
-          content: '';
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          border: 3px solid transparent;
-          width: 0;
-          height: 0;
-        }
-        &::before {
-          top: 0;
-          left: 0;
-        }
-        &::after {
-          bottom: 0;
-          right: 0;
-        }
-        &:hover::before,
-        &:hover::after {
-          width: 100%;
-          height: 100%;
-        }
-        &:hover::before {
-          border-top-color: white; // Make borders visible
-          border-right-color: white;
-          transition:
-          width 0.15s ease-out, // Width expands first
-          height 0.15s ease-out 0.15s; // And then height
-        }
-        &:hover::after {
-          border-bottom-color: white; // Make borders visible
-          border-left-color: white;
-          transition:
-          border-color 0.15s ease-out 0.3s, // Wait for ::before to finish before showing border
-          width 0.15s ease-out 0.3s, // And then exanding width
-          height 0.15s ease-out 0.5s; // And finally height
-        }
-        &:focus {
-          outline: none;
+  .parallax-static-content {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin: 30px 0 0 30px;
+    }
+    .button-container {
+      button {
+        padding: .5em 1em;
+        border: solid 3px white;
+        background: none;
+        cursor: pointer;
+        @media #{$breakpoint-large} {
+          border: none;
+          position: relative;
+          transition: 0.15s;
+          &::before,
+          &::after {
+            box-sizing: inherit;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: 3px solid transparent;
+            width: 0;
+            height: 0;
+          }
+          &::before {
+            top: 0;
+            left: 0;
+          }
+          &::after {
+            bottom: 0;
+            right: 0;
+          }
+          &:hover::before,
+          &:hover::after {
+            width: 100%;
+            height: 100%;
+          }
+          &:hover::before {
+            border-top-color: white; // Make borders visible
+            border-right-color: white;
+            transition:
+            width 0.15s ease-out, // Width expands first
+            height 0.15s ease-out 0.15s; // And then height
+          }
+          &:hover::after {
+            border-bottom-color: white; // Make borders visible
+            border-left-color: white;
+            transition:
+            border-color 0.15s ease-out 0.3s, // Wait for ::before to finish before showing border
+            width 0.15s ease-out 0.3s, // And then exanding width
+            height 0.15s ease-out 0.5s; // And finally height
+          }
+          &:focus {
+            outline: none;
+          }
         }
       }
     }
+  }
+  .parallax-background {
+    background: url("../img/umbrella.JPG") repeat;
+    background-position: top;
+    background-size: cover;
+    height: $parallax-background-height;
+    left: 0;
+    position: absolute;
+    top: - $parallax-window-height / 3;
+    width: 100vw;
+    height: 100vh;
   }
 }
